vn.bot: update section name. Add :toc

--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -4,7 +4,9 @@ allow_comment: yes
 tags: ['irc', 'chat', 'archlinuxvn']
 ---
 
-## Danh sách các bot
+{:toc}
+
+## Danh sách bot {#list}
 
 Ở [kênh IRC nhóm] [irc], có các `bot` sau đây
 
@@ -21,7 +23,7 @@ Mục đích của bot là cung cấp vài gợi ý, ghi nhớ và giúp đỡ, 
 số từ không thích hợp trên kênh, để lưu trữ `log`, và là một cách đơn giản
 để theo dõi tình trạng hoạt động của các máy phục vụ.
 
-## Bot nhiều chuyện `l00s9rbot`
+## Bot nhiều chuyện `l00s9rbot` {#l00s3r}
 
 Bot có nhiều plugin khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh
 `!help` hoặc `!help <plugin_name>` khi đang ở trong kênh `#archlinuxvn`.
@@ -43,10 +45,10 @@ Vài plugin cơ bản của bot
 
 Thông tin về các `hạt dẻ` có thể xem trong [thông báo đầu tiên][nutshell].
 
-## Bot hỗ trợ xử lí thông tin `SuperLuserv2`
+## Bot đa năng `SuperLuserv2` {#superluser}
 
-Bot này được cung cấp bởi thành viên `_Tux_`. Bot có nhiều chức năng 
-khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh `.commands` khi đang 
+Bot này được cung cấp bởi thành viên `_Tux_`. Bot có nhiều chức năng
+khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh `.commands` khi đang
 ở trong kênh `#archlinuxvn`, bot sẽ gửi thông tin cho bạn
 dưới dạng private message.
 Bạn có thể tham khảo với [mã nguồn của bot willie tại github] [williesrc].
