vn.members: clean up text

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -12,7 +12,7 @@ Công việc cụ thể của một số thành viên có ở [Workers](workers/
 
 ## Vài thành viên
 
-Vài thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
+Vài thành viên của ArchLinuxVn.
 Danh sách này không đầy đủ và được dùng minh họa cho một số
 bộ cài đặt ArchLinux. Bạn có thể liên hệ những người quản lý để
 thêm vào dánh sách này.
@@ -22,7 +22,7 @@ thêm vào dánh sách này.
 > electr0n, jcisio, gialong, fta, [stk] [], [KyAnh] [], Cooly,
 > longgia2001, rmrf, n0bawk, favadi
 
-(các thành viên được liệt kê ngẫu nhiên.)
+_(các thành viên được liệt kê ngẫu nhiên.)_
 
 ## Máy dùng ArchLinux
 
