vn.bot: new section #botvsbot

--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -76,6 +76,13 @@ Những chức năng chính của bot
 Nhưng thông tin khác về `commands` của bot `SuperLuserv2` có thể xem
 trên [trang chủ của bot willie ở GitHub] [williecommands]
 
+## Cho hai bot đánh nhau {#botvsbot}
+
+Bạn có thể dùng lệnh `!fk superluserv2` để phát sinh hai số ngẫu nhiên
+và xác định _thắng thua_ cho hai bot. Trường hợp `bot` nhiều chuyện
+`l00s9rbot` thua, bạn mất tối đa 5 hạt dẻ. Khi thắng, bạn sẽ được chia
+đôi số hạt dẻ thu được từ `SuperLuserv2`.
+
 [irc]: /vn/irc/
 [botsrc]: https://github.com/archlinuxvn/irclog/tree/master/bot
 [bot]: /vn/bot/
