vn.irc: add new rule item

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -45,6 +45,8 @@ Bạn cần lưu ý vài điểm sau khi trao đổi trên kênh IRC
   của kênh IRC, bất kỳ ai cũng có khả năng theo dõi các cuộc nói chuyện
   đã và đang diễn ra, nên bạn cần chú ý không nên phát ngôn thiếu thận
   trọng trên kênh IRC;
+* **nếu bạn có phần lưu trữ riêng, không được tự ý công bố phần lưu trữ
+  đó ra bên ngoài mà không có sự tham khảo ý kiến các thành viên khác**;
 * bạn có thể văng tục, nói bậy, đó là quyền cá nhân của bạn
     _(thực ra việc này chỉ có hại cho bạn, nên bạn muốn làm hại chính bạn
       bao nhiêu là tùy thích, không ai cấm)_,
@@ -73,7 +75,8 @@ chẳng hạn [PostImage.org] [].
 ## Điều hành kênh
 
 `n0b0dy` là người đã đăng ký kênh ở `freenode`, mặc dù kênh đã hoạt động
-từ trước đó. Các thành viên có quyền quản lý kênh là `Cooly`, `n0b0dy`, `z1y`.
+từ trước đó. Các thành viên có quyền quản lý kênh là
+`Cooly`, `n0b0dy`, `z1y`, `kitarousa`.
 
 `Quản lý` ở đây được hiểu là nhằm xử lý các vấn đề kỹ thuật của kênh:
 các sự cố , cài đặt và điều chỉnh các `bot`, ... Không có bất kỳ sự quản
