news: add link to the 1st post/offline

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -41,6 +41,11 @@ tags: ['archlinuxvn', 'offline', 'news']
 * 1/7: Ra mắt trang web mới. Nội dung tĩnh với phần bình luận hỗ trợ
   bở Disqus.
 
+## 2011
+
+* 3/12: [Offline đầu tiên của ArchLinuxVn][the1stoffline]
+* 29/5: [Bài biết đầu tiên trên nhóm thư][the1stpost] _(làm áo t-shirt)_
+
 [offline5]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/d6df23e614c0fde3
 [doodle5]: http://www.doodle.com/2ymbq9y23rb2dhfs
 [offline6]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/ce1b57e8cc451bdb
@@ -53,3 +58,5 @@ tags: ['archlinuxvn', 'offline', 'news']
 [t-shirt-2013]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/inf9cxY_t58
 [offline9]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/DPkAGviV-5Q
 [offline10]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/09Hb92mxrwU
+[the1stpost]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/C_L2aLi3Rk4
+[the1stoffline]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/CE363mVYruk
