vn/news fix typo error

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -38,8 +38,8 @@ tags: ['archlinuxvn', 'offline', 'news']
   * Trao đổi về cách viết bài cho trang chủ
   * Làm áo cho các thành viên.
   * Các vấn đề khác liên quan tới ArchLinux.
-* 1/7: Ra mắt trang web mới. Nội dung tĩnh với phần bình luận hỗ trợ
-  bở Disqus.
+* 1/7: Ra mắt trang web mới.
+  Nội dung tĩnh với phần bình luận hỗ trợ bởi Disqus.
 
 ## 2011
 
