vn.news: Offline 11 announcement

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,6 +9,7 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
+* *15/5*: [Offline 11 kỷ niệm 3 năm của nhóm][offline11] (xem [Doodle][doodle11])
 * *28/2*: [Lập kênh trao đổi trên Skype](/vn/skype/)
 * *23/2*: [Offline chào năm mới] [offline10]
 
@@ -60,3 +61,5 @@ tags: ['archlinuxvn', 'offline', 'news']
 [offline10]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/09Hb92mxrwU
 [the1stpost]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/C_L2aLi3Rk4
 [the1stoffline]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/CE363mVYruk
+[offline11]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/b_TfxMKrHdM
+[doodle11]: http://doodle.com/d96qpepuri8uy3qe
