index: add #english name VAUG

--- a/content/index.html
+++ b/content/index.html
@@ -3,6 +3,7 @@ title: Nhóm người dùng ArchLinux Việt Nam
 ---
 
 Đây là trang chủ của nhóm người Việt Nam dùng [ArchLinux] [].
+Tên tiếng Anh của nhóm là `VAUG` (Vietnamese ArchLinux Users Group.)
 
 Trang chủ này được thiết kế để mọi thành viên đều có khả năng thay đổi,
 chỉnh sửa, nhằm cung cấp các thông tin, tài liệu tốt nhất cho những người
