vn.irc: add link to #bot

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -1,5 +1,5 @@
 ---
-title: irc - trao đổi thời gian thực
+title: Trao đổi thời gian thực
 allow_comment: yes
 tags: ['irc', 'chat', 'archlinuxvn']
 ---
@@ -71,6 +71,10 @@ Các đoạn mã, `log`,... các đoạn trao đổi dài không nên ghi trực
 kênh, mà thông qua dịch vụ như [pastie.org] []. Để gửi hình ảnh, bạn đừng
 nên dùng `ImageHack.us` do dịch vụ này bị chặn ở nhiều nơi. Bạn có thể dùng
 chẳng hạn [PostImage.org] [].
+
+## Bot (máy tự trả lời)
+
+[Xem ở trang riêng](/vn/bot/).
 
 ## Điều hành kênh
 
