vn.members#index clean up blog links

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -43,7 +43,6 @@ _(Phần nội dung này đã được gỡ bỏ ngày 27/2/2014 do nội dung k
 
 [stk]: http://projektantos.wordpress.com/
 [KyAnh]: http://icy.theslinux.org/
-[NgoHuy]: /blog/~huy/
-[redlotus]: /blog/~redlotus/
-[l00s3r]: http://viettug.org/
-[n0b0dy]: /blog/~n0b0dy/
+[NgoHuy]: /~huy/
+[redlotus]: /~redlotus/
+[n0b0dy]: /~n0b0dy/
