vn.members#index add link to the old list of machines

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -27,7 +27,8 @@ _(các thành viên được liệt kê ngẫu nhiên.)_
 ## Máy dùng ArchLinux
 
 _(Phần nội dung này đã được gỡ bỏ ngày 27/2/2014 do nội dung không
-được cập nhật và không thật sự có ích cho cộng đồng.)_
+được cập nhật và không thật sự có ích cho cộng đồng. Nội dung cũ
+của phần này có thể [xem tại Github][old.list].)_
 
 ## Mẹo
 
@@ -46,3 +47,4 @@ _(Phần nội dung này đã được gỡ bỏ ngày 27/2/2014 do nội dung k
 [NgoHuy]: /~huy/
 [redlotus]: /~redlotus/
 [n0b0dy]: /~n0b0dy/
+[old.list]: https://github.com/archlinuxvn/home/commit/eab6f3b1e81eeedb0ed578069be72e75497008f7
