--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,7 +9,8 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
-* *9/8*: [Có mirror mới dành cho ArchLinuxVn](http://f.archlinuxvn.org/)
+* *16/8*: [Có mirror mới dành cho ArchLinux ARM](http://f.archlinuxvn.org/)
+* *9/8*: [Có mirror mới dành cho ArchLinux](http://vn.mirror.archlinuxarm.org/)
 * *15/5*: [Offline 11 kỷ niệm 3 năm của nhóm][offline11] (xem [Doodle][doodle11])
 * *28/2*: [Lập kênh trao đổi trên Skype](/vn/skype/)
 * *23/2*: [Offline chào năm mới] [offline10]
