news: new group on #facebook

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,6 +9,7 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
+* *11/9*: [Lập nhóm trao đổi trên Facebook](https://facebook.com/groups/archlinuxvn/)
 * *16/8*: [Có mirror mới dành cho ArchLinux ARM](http://f.archlinuxvn.org/)
 * *9/8*: [Có mirror mới dành cho ArchLinux](http://vn.mirror.archlinuxarm.org/)
 * *15/5*: [Offline 11 kỷ niệm 3 năm của nhóm][offline11] (xem [Doodle][doodle11])
