vn.author-guide: fix link to #l00s9r (main server)

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -25,7 +25,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 ## Nhóm A: Yêu cầu bắt buộc
 
 1. Tài khoản để sửa bài. Đây là tài khoản để truy cập vào mã nguồn (git)
-   của trang chủ. Mã nguồn để trên máy phục vụ <http://viettug.org>.
+   của trang chủ. Mã nguồn để trên máy phục vụ [l00s9r][].
    Bạn cần liên hệ với [Kỳ Anh](/~icy) để có được tài khoản này.
 
    * Trước khi xin một tài khoản, bạn cần chuẩn bị một cặp `SSH key`; nếu
@@ -358,3 +358,4 @@ mã nguồn của các bài viết tại [github] [].
 [smilies]: /i/sm/
 [mirror]: https://github.com/archlinuxvn/home/
 [example1]: https://github.com/archlinuxvn/home/commit/025daa7/
+[l00s9r]: http://theslinux.org/l00s/9r
