vn.members.workers: update list of workers

--- a/content/vn/members/workers.html
+++ b/content/vn/members/workers.html
@@ -12,11 +12,14 @@ tags: ['archlinuxvn', 'contributor']
 Dưới đây là danh sách thành viên với những nhiệm vụ cụ thể.
 Các thành viên được biết quá `nick` trên các kênh như `IRC` hay nhóm thư.
 
-* Nhóm thư chính: NgoHuy, n0b0dy, z1y, stk
-* Trang chủ _(hai mirror)_: z1y
-* Facebook FanPage: NgoHuy, z1y, xluffy, stk
+* Nhóm thư chính: NgoHuy, n0b0dy, z1y, stk et al.
+* Trang chủ _(hai mirror)_: z1y et al.
+* Facebook FanPage: NgoHuy, z1y, xluffy, stk et al.
+* Facebook Group: n0b0dy, xluffy, redlotus, et al.
 * Git repo: z1y
 * Kênh IRC: n0b0dy, z1y, Cooly, kitarousa
+* Skype Group: z1y, xluffy
+# Quản lý mirror <http://f.archlinuxvn.org/>: z1y, xngqhy
 
 ## Cần bạn giúp đỡ {#help}
 
