index: add link to #skype and #facebook page

--- a/content/index.html
+++ b/content/index.html
@@ -9,7 +9,9 @@ Trang chủ này được thiết kế để mọi thành viên đều có khả
 chỉnh sửa, nhằm cung cấp các thông tin, tài liệu tốt nhất cho những người
 dùng Arch ở mức độ <em>cơ bản</em> và <em>trung bình</em>.
 
-Nhóm ArchLinuxVn hoạt động qua các kênh chính: [nhóm thư] [list] và [kênh irc] [irc]
+Nhóm ArchLinuxVn hoạt động qua các kênh chính: [nhóm thư] [list] và [kênh irc] [irc].
+Ngoài ra còn có các kênh như [Skype](/vn/skype) và [Facebook](/vn/facebook/).
+
 Một số thành viên cùng nhau phát triển các dự án chung tại [github] [].
 Tất cả các thành viên mới đều được hoan nghênh tham gia vào một trong các
 kênh liên lạc này.
