vn: add common #rules page for all channels (irc, list, skype,...)

--- a/content/vn/skype.html
+++ b/content/vn/skype.html
@@ -24,10 +24,7 @@ Các thành viên quản lý kênh là `kyanh.314` và `xquang.foss`
 
 ## Quy tắc ứng xử
 
-Bao gồm các [quy tắc trên kênh IRC](/vn/irc/#quy-tac-ung-xu).
-
-Các thành viên không có trao đổi nào liên tục trong thời gian 2 tháng
-sẽ được người điều hành xóa tên khỏi kênh.
+Xem [Quy tắc chung](/vn/rules/).
 
 ## Các vấn đề
 
