vn.rules: minor update

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -26,16 +26,17 @@ chẳng hạn [PostImage.org] [].
 
 Bạn cần lưu ý vài điểm sau khi trao đổi trên các kênh liên lạc của ArchLinuxVN
 
-* Các vấn đề không liên quan tới ArchLinuxVn hoặc ArchLinux không được hoan
-  nghênh trên nhóm thư, trừ khi chúng thật sự hữu ích cho mọi người. Bạn
-  nên đặt tiêu đề cho thư bắt đầu bằng `OT` _(off topic)_ với các chủ đề
-  thuộc dạng này.
+* Không viết toàn chữ hoa trong bài của bạn;
+* Viết tiếng Việt có dấu trừ khi thiết bị của bạn không hỗ trợ tiếng Việt;
+* Vấn đề không liên quan tới ArchLinuxVn hoặc ArchLinux không được hoan
+  nghênh trừ khi chúng thật sự hữu ích cho mọi người. Bạn nên đặt tiêu đề
+  cho thư bắt đầu bằng `OT` _(off topic)_ với các chủ đề thuộc dạng này;
 * Mỗi tin bạn gửi đi thì nó có thể còn lưu lại trên mạng mãi mãi,
   ai cũng có thể đọc được, bất kỳ lúc nào. Vì thế, hãy bảo vệ chính bạn
   trước: hãy suy nghĩ cẩn thận, phát ngôn hợp lý. Đó là lời khuyên,
   còn thực tế thì bạn có thể phát biểu gì tùy thích, đó là quyền của bạn:
   nếu mọi người trên nhóm thư thấy không hợp lý, thì đơn giản là họ sẽ
-  đề nghị loại bạn khỏi nhóm thư.
+  đề nghị loại bạn khỏi nhóm thư;
 * Bạn có thể văng tục, nói bậy, đó là quyền cá nhân của bạn
     _(thực ra việc này chỉ có hại cho bạn, nên bạn muốn làm hại chính bạn
       bao nhiêu là tùy thích, không ai cấm)_,
@@ -48,13 +49,11 @@ Bạn cần lưu ý vài điểm sau khi trao đổi trên các kênh liên lạ
 
 ## Dành riêng cho kênh IRC {#irc}
 
-* (IRC) Mọi nội dung trao đổi sẽ được các [bot] [] ghi lại và [lưu trữ trên
-  trang chủ] [irclog]. <s>Trang lưu trữ này được bảo vệ bởi chìa khóa,
-  được dùng làm tư liệu trong tương lai _(hiện tại chưa có mục đích cụ thể)_;</s>
-  Nội dung lưu trữ không được công bố. Tuy nhiên, do tính chất công cộng
-  của kênh IRC, bất kỳ ai cũng có khả năng theo dõi các cuộc nói chuyện
-  đã và đang diễn ra, nên bạn cần chú ý không nên phát ngôn thiếu thận
-  trọng trên kênh IRC;
+* Mọi nội dung trao đổi sẽ được các [bot](/vn/bot/) ghi lại.
+  Nội dung lưu trữ không được công bố cho bất kỳ bên thứ ba nào.
+  Tuy nhiên, do tính chất công cộng của kênh IRC, bất kỳ ai cũng có
+  khả năng theo dõi các cuộc nói chuyện đã và đang diễn ra,
+  nên bạn cần chú ý không nên phát ngôn thiếu thận trọng trên kênh IRC;
 * **Nếu bạn có phần lưu trữ riêng nội dung của kênh, không được tự ý công
   bố phần lưu trữ đó ra bên ngoài mà không có sự tham khảo ý kiến các
   thành viên khác**;
@@ -65,10 +64,8 @@ Khi tham gia nhóm thư, bạn cần đề ý các điều sau
 
 * Nhóm thư có chức năng điều chỉnh để bạn không nhận quá nhiều thư.
   Bạn có thể lựa chọn khi đăng nhập vào giao diện web của nhóm thư;
-* Viết tiếng Việt có dấu trừ khi thiết bị của bạn không hỗ trợ tiếng Việt;
-* Không sử dụng thư toàn chữ hoa;
 * Phải đặt tiêu đề cho thư để thư không rơi vào `Spam box` của các trình
-  duyệt thư và máy chủ lọc thư
+  duyệt thư và máy chủ lọc thư;
 * Thư sẽ gửi cho tất cả các thành viên trong nhóm. Do đó, đừng trao đổi
   các vấn đề thuần túy cá nhân, tình cảm hoặc các chủ đề nhạy cảm khác
   trên nhóm thư.
@@ -78,6 +75,13 @@ Khi tham gia nhóm thư, bạn cần đề ý các điều sau
 Mỗi kênh có một vài người điều hành, đóng vai trò chính là xử lý các
 sự cố kỹ thuật, giúp nhóm thư không bị `bom thư`, hoặc giúp đỡ các thành
 viên mới vượt qua các rào cản kỹ thuật.
+
+Khi có thành viên vi phạm các quy tắc thông thường, hãy đặt ra câu hỏi
+các đầu tiên, là
+
+1. Động cơ thật sự của thành viên đó là gì?
+2. Làm thế nào để giúp thành viên đó không vi phạm nữa?
+3. Liệu _vi phạm đó_ có thể trở thành một tiêu chuẩn mới được chấp nhận?
 
 Các điều hành viên sẽ không can thiệp vào nội dung do các thành viên.
 Trong trường hợp xảy ra các vấn đề hiểu lầm, xích mích, ... hoặc khi
@@ -100,3 +104,6 @@ các vấn đề liên quan tới nội dung. Trường hợp bạn là người
 và bạn cảm thấy có vấn đề nào đó trên nhóm cần giải quyết,
 hãy bình tĩnh và trao đổi với các điều hành viên khác,
 trước khi vội vã đưa ra kết luận và hành động độc lập.
+
+[pastie.org]: http://pastie.org/
+[PostImage.org]: http://PostImage.org
