--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -12,31 +12,28 @@ _(nhóm thư, irc, facebook, ...)_ của nhóm ArchLinuxVN.
 
 ## Nội dung trao đổi
 
-Bạn được khuyến khích trao đổi các vấn đề liên quan tới `Linux`, `ArchLinux`
-và mã nguồn mở. Thực tế thì trên kênh bàn rất nhiều vấn đề khác nhau,
-không chỉ giới hạn ở chủ đề nào. Một số thành viên khác có thể thấy không hợp
-lý và nhắc nhở, khi đó nếu bạn đang nói lạc đề thì hãy nhanh chóng dừng lại.
-
-Các đoạn mã, `log`,... các đoạn trao đổi dài không nên ghi trực tiếp trên
-kênh, mà thông qua dịch vụ như [pastie.org] []. Để gửi hình ảnh, bạn đừng
-nên dùng `ImageHack.us` do dịch vụ này bị chặn ở nhiều nơi. Bạn có thể dùng
-chẳng hạn [PostImage.org] [].
+* Không viết toàn chữ hoa trong bài của bạn;
+* Viết tiếng Việt có dấu trừ khi thiết bị của bạn không hỗ trợ tiếng Việt;
+* Bạn được khuyến khích trao đổi các vấn đề liên quan tới `Linux`, `ArchLinux`
+  và mã nguồn mở. Thực tế thì trên kênh bàn rất nhiều vấn đề khác nhau,
+  không chỉ giới hạn ở chủ đề nào. Một số thành viên khác có thể thấy không hợp
+  lý và nhắc nhở, khi đó nếu bạn đang nói lạc đề thì hãy nhanh chóng dừng lại.
+* Các đoạn mã, `log`,... các đoạn trao đổi dài không nên ghi trực tiếp trên
+  kênh, mà thông qua dịch vụ như [pastie.org] []. Để gửi hình ảnh, bạn đừng
+  nên dùng `ImageHack.us` do dịch vụ này bị chặn ở nhiều nơi. Bạn có thể dùng
+  chẳng hạn [PostImage.org] []. Trên Facebook bạn có nhiều lựa chọn hơn.
+* Vấn đề không liên quan tới ArchLinuxVn hoặc ArchLinux không được hoan
+  nghênh trừ khi chúng thật sự hữu ích cho mọi người.
+  Bạn nên đặt tiêu đề bắt đầu bằng `OT` _(off topic)_ để cảnh báo trước;
+* Mỗi tin bạn gửi đi thì nó có thể còn lưu lại trên mạng mãi mãi,
+  ai cũng có thể đọc được, bất kỳ lúc nào. Vì thế, hãy phát biểu hợp lý,
+  trước hết là để bảo vệ chính bạn. Đó là lời khuyên, còn thực tế
+  bạn có thể phát biểu gì tùy thích, đó là quyền của bạn:
+  nếu mọi người trên nhóm thư thấy không hợp lý, thì đơn giản là họ sẽ
+  đề nghị loại bạn khỏi nhóm thư;
 
 ## Quy tắc ứng xử
 
-Bạn cần lưu ý vài điểm sau khi trao đổi trên các kênh liên lạc của ArchLinuxVN
-
-* Không viết toàn chữ hoa trong bài của bạn;
-* Viết tiếng Việt có dấu trừ khi thiết bị của bạn không hỗ trợ tiếng Việt;
-* Vấn đề không liên quan tới ArchLinuxVn hoặc ArchLinux không được hoan
-  nghênh trừ khi chúng thật sự hữu ích cho mọi người. Bạn nên đặt tiêu đề
-  cho thư bắt đầu bằng `OT` _(off topic)_ với các chủ đề thuộc dạng này;
-* Mỗi tin bạn gửi đi thì nó có thể còn lưu lại trên mạng mãi mãi,
-  ai cũng có thể đọc được, bất kỳ lúc nào. Vì thế, hãy bảo vệ chính bạn
-  trước: hãy suy nghĩ cẩn thận, phát ngôn hợp lý. Đó là lời khuyên,
-  còn thực tế thì bạn có thể phát biểu gì tùy thích, đó là quyền của bạn:
-  nếu mọi người trên nhóm thư thấy không hợp lý, thì đơn giản là họ sẽ
-  đề nghị loại bạn khỏi nhóm thư;
 * Bạn có thể văng tục, nói bậy, đó là quyền cá nhân của bạn
     _(thực ra việc này chỉ có hại cho bạn, nên bạn muốn làm hại chính bạn
       bao nhiêu là tùy thích, không ai cấm)_,
@@ -56,11 +53,9 @@ Bạn cần lưu ý vài điểm sau khi trao đổi trên các kênh liên lạ
   nên bạn cần chú ý không nên phát ngôn thiếu thận trọng trên kênh IRC;
 * **Nếu bạn có phần lưu trữ riêng nội dung của kênh, không được tự ý công
   bố phần lưu trữ đó ra bên ngoài mà không có sự tham khảo ý kiến các
-  thành viên khác**;
+  thành viên khác**.
 
 ## Dành cho nhóm thư {#lists}
-
-Khi tham gia nhóm thư, bạn cần đề ý các điều sau
 
 * Nhóm thư có chức năng điều chỉnh để bạn không nhận quá nhiều thư.
   Bạn có thể lựa chọn khi đăng nhập vào giao diện web của nhóm thư;
@@ -69,6 +64,14 @@ Khi tham gia nhóm thư, bạn cần đề ý các điều sau
 * Thư sẽ gửi cho tất cả các thành viên trong nhóm. Do đó, đừng trao đổi
   các vấn đề thuần túy cá nhân, tình cảm hoặc các chủ đề nhạy cảm khác
   trên nhóm thư.
+
+## Các vi phạm mẫu bạn cần em để tránh {#examples}
+
+* Nói tục;
+* Gửi thông tin quảng cáo cho hoạt động kinh doanh;
+* Viết tiếng Việt không dấu gây ra các ý hiểu nhầm;
+* Bàn về các vấn đề chẳng liên quan gì tới Linux, ví dụ, _áo tắm_;
+* Công kích, chỉ trích người khác một cách chủ quan.
 
 ## Dành cho người điều hành {#admin}
 
@@ -82,6 +85,9 @@ các đầu tiên, là
 1. Động cơ thật sự của thành viên đó là gì?
 2. Làm thế nào để giúp thành viên đó không vi phạm nữa?
 3. Liệu _vi phạm đó_ có thể trở thành một tiêu chuẩn mới được chấp nhận?
+
+Hãy đặt mục tiêu _giữ thành viên và tôn trọng hành vi của họ lên hàng đầu_.
+Nếu phải _phạt_, phải thật tuyết phục.
 
 Các điều hành viên sẽ không can thiệp vào nội dung do các thành viên.
 Trong trường hợp xảy ra các vấn đề hiểu lầm, xích mích, ... hoặc khi
@@ -99,10 +105,8 @@ Bạn có thể luôn luôn lựa chọn nêu vấn đề ra cho tất cả các
 khác được biết, nhưng hãy luôn tuân theo quy tắc đầu tiên là **TÔN TRỌNG
 THÀNH VIÊN KHÁC**.
 
-Như vậy, những người điều hành *giúp* nhưng không giải quyết thay bạn
-các vấn đề liên quan tới nội dung. Trường hợp bạn là người điều hành
-và bạn cảm thấy có vấn đề nào đó trên nhóm cần giải quyết,
-hãy bình tĩnh và trao đổi với các điều hành viên khác,
+Trường hợp bạn là người điều hành và bạn cảm thấy có vấn đề nào đó trên
+nhóm cần giải quyết, hãy bình tĩnh và trao đổi với các điều hành viên khác,
 trước khi vội vã đưa ra kết luận và hành động độc lập.
 
 [pastie.org]: http://pastie.org/
