vn.news: 2011/12/4: create facebook fanpage

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -47,6 +47,7 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2011 {#y2011}
 
+* 4/12: [Lập Fanpage trên Facebook](https://www.facebook.com/ArchlinuxVN/info)
 * 3/12: [Offline đầu tiên của ArchLinuxVn][the1stoffline]
 * 29/5: [Bài biết đầu tiên trên nhóm thư][the1stpost] _(làm áo t-shirt)_
 
