vn.rules: minor update

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -29,8 +29,8 @@ _(nhóm thư, irc, facebook, ...)_ của nhóm ArchLinuxVN.
   ai cũng có thể đọc được, bất kỳ lúc nào. Vì thế, hãy phát biểu hợp lý,
   trước hết là để bảo vệ chính bạn. Đó là lời khuyên, còn thực tế
   bạn có thể phát biểu gì tùy thích, đó là quyền của bạn:
-  nếu mọi người trên nhóm thư thấy không hợp lý, thì đơn giản là họ sẽ
-  đề nghị loại bạn khỏi nhóm thư;
+  nếu mọi người trên nhóm thấy không hợp lý, thì đơn giản là họ sẽ
+  đề nghị loại bạn khỏi nhóm, kênh liên lạc;
 
 ## Quy tắc ứng xử
 
