vn.rules: minor update

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -65,7 +65,7 @@ _(nhóm thư, irc, facebook, ...)_ của nhóm ArchLinuxVN.
   các vấn đề thuần túy cá nhân, tình cảm hoặc các chủ đề nhạy cảm khác
   trên nhóm thư.
 
-## Các vi phạm mẫu bạn cần em để tránh {#examples}
+## Ví dụ về vi phạm cần tránh {#examples}
 
 * Nói tục;
 * Gửi thông tin quảng cáo cho hoạt động kinh doanh;
