vn.rules: make sth. clear

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -89,7 +89,8 @@ các đầu tiên, là
 Hãy đặt mục tiêu _giữ thành viên và tôn trọng hành vi của họ lên hàng đầu_.
 Nếu phải _phạt_, phải thật tuyết phục.
 
-Các điều hành viên sẽ không can thiệp vào nội dung do các thành viên.
+Các điều hành viên sẽ không can thiệp vào nội dung do các thành viên
+tạo ra _(không chỉnh sửa, không xóa tùy tiện)_.
 Trong trường hợp xảy ra các vấn đề hiểu lầm, xích mích, ... hoặc khi
 bạn cảm thấy khó chịu về  cá nhân, thư hoặc vấn đề nào được nêu ra,
 cách giải quyết được đề nghị như sau:
