--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,6 +9,8 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
+* *21/9*: [Bản tin số 2](/zine/2014/02)
+* *15/9*: [Bản tin số 1](/zine/2014/01)
 * *11/9*: [Lập nhóm trao đổi trên Facebook](https://facebook.com/groups/archlinuxvn/)
 * *16/8*: [Có mirror mới dành cho ArchLinux ARM](http://f.archlinuxvn.org/)
 * *9/8*: [Có mirror mới dành cho ArchLinux](http://vn.mirror.archlinuxarm.org/)
