news: (the first) meeting off VAUG core members

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,6 +9,7 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
+* *12/10*: Họp mặt nhóm điều hành ArchLinuxVn tại Sài Gòn
 * *21/9*: [Bản tin số 2](/zine/2014/02)
 * *15/9*: [Bản tin số 1](/zine/2014/01)
 * *11/9*: [Lập nhóm trao đổi trên Facebook](https://facebook.com/groups/archlinuxvn/)
