vn.rules: new section for #skype (and #irc)

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -51,6 +51,9 @@ _(nhóm thư, irc, facebook, ...)_ của nhóm ArchLinuxVN.
   Tuy nhiên, do tính chất công cộng của kênh IRC, bất kỳ ai cũng có
   khả năng theo dõi các cuộc nói chuyện đã và đang diễn ra,
   nên bạn cần chú ý không nên phát ngôn thiếu thận trọng trên kênh IRC;
+
+## Dành cho kênh IRC và Skype {#skype}
+
 * **Nếu bạn có phần lưu trữ riêng nội dung của kênh, không được tự ý công
   bố phần lưu trữ đó ra bên ngoài mà không có sự tham khảo ý kiến các
   thành viên khác**.
