vn.rules#irc: add link to list archive that describes loggers

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -51,12 +51,13 @@ _(nhóm thư, irc, facebook, ...)_ của nhóm ArchLinuxVN.
   Tuy nhiên, do tính chất công cộng của kênh IRC, bất kỳ ai cũng có
   khả năng theo dõi các cuộc nói chuyện đã và đang diễn ra,
   nên bạn cần chú ý không nên phát ngôn thiếu thận trọng trên kênh IRC;
+* [Giải thích chi tiết về các `logger` trên kênh][irc.logger]
 
 ## Dành cho kênh IRC và Skype {#skype}
 
-* **Nếu bạn có phần lưu trữ riêng nội dung của kênh, không được tự ý công
+* Nếu bạn có phần lưu trữ riêng nội dung của kênh, không được tự ý công
   bố phần lưu trữ đó ra bên ngoài mà không có sự tham khảo ý kiến các
-  thành viên khác**.
+  thành viên khác.
 
 ## Dành cho nhóm thư {#lists}
 
@@ -115,3 +116,4 @@ trước khi vội vã đưa ra kết luận và hành động độc lập.
 
 [pastie.org]: http://pastie.org/
 [PostImage.org]: http://PostImage.org
+[irc.logger]: http://l.archlinuxvn.org/archlinuxvn/msg01874.html
