index: fix link to #lists

--- a/content/index.html
+++ b/content/index.html
@@ -22,7 +22,7 @@ và các kênh liên lạc của nó sẽ giúp ích cho bạn!
 
 Để viết bài cho ArchLinuxVn, mời bạn xem [Author's Guide][].
 
-[list]: http://groups.google.com/group/archlinuxvn/
+[list]: /vn/lists/
 [irc]: /vn/irc/
 [github]: http://github.com/archlinuxvn/
 [ArchLinux]: /faq/what_is_archlinux/
