vn.rules: fix typo error

--- a/content/vn/rules.html
+++ b/content/vn/rules.html
@@ -91,7 +91,7 @@ các đầu tiên, là
 3. Liệu _vi phạm đó_ có thể trở thành một tiêu chuẩn mới được chấp nhận?
 
 Hãy đặt mục tiêu _giữ thành viên và tôn trọng hành vi của họ lên hàng đầu_.
-Nếu phải _phạt_, phải thật tuyết phục.
+Nếu phải _phạt_, phải thật thuyết phục.
 
 Các điều hành viên sẽ không can thiệp vào nội dung do các thành viên
 tạo ra _(không chỉnh sửa, không xóa tùy tiện)_.
