--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,12 +9,14 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
-* *12/10*: Họp mặt nhóm điều hành ArchLinuxVn tại Sài Gòn
+* *15/10*: Gặp mặt Dương `cmpitg` tại Sài Gòn
+* *12/10*: <s>Họp mặt nhóm điều hành ArchLinuxVn tại Sài Gòn</s>
 * *21/9*: [Bản tin số 2](/zine/2014/02)
 * *15/9*: [Bản tin số 1](/zine/2014/01)
 * *11/9*: [Lập nhóm trao đổi trên Facebook](https://facebook.com/groups/archlinuxvn/)
 * *16/8*: [Có mirror mới dành cho ArchLinux ARM](http://f.archlinuxvn.org/)
 * *9/8*: [Có mirror mới dành cho ArchLinux](http://vn.mirror.archlinuxarm.org/)
+* *??/6*: [Gặp mặt `chungbd` tại Sài Gòn](http://l.archlinuxvn.org/archlinuxvn/msg02297.html)
 * *15/5*: [Offline 11 kỷ niệm 3 năm của nhóm][offline11] (xem [Doodle][doodle11])
 * *28/2*: [Lập kênh trao đổi trên Skype](/vn/skype/)
 * *23/2*: [Offline chào năm mới] [offline10]
