vn.news: add old event (April 11th)

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -18,6 +18,7 @@ tags: ['archlinuxvn', 'offline', 'news']
 * *9/8*: [Có mirror mới dành cho ArchLinux](http://vn.mirror.archlinuxarm.org/)
 * *??/6*: [Gặp mặt `chungbd` tại Sài Gòn](http://l.archlinuxvn.org/archlinuxvn/msg02297.html)
 * *15/5*: [Offline 11 kỷ niệm 3 năm của nhóm][offline11] (xem [Doodle][doodle11])
+* *11/4*: Gặp mặt `MrTux` tại Sài Gòn
 * *28/2*: [Lập kênh trao đổi trên Skype](/vn/skype/)
 * *23/2*: [Offline chào năm mới] [offline10]
 
