vn.news: offline 12th cancel

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -9,7 +9,7 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 ## 2014 {#y2014}
 
-* *1/11*: [Offline 12 và mạo danh](http://l.archlinuxvn.org/archlinuxvn/msg02737.html)
+* *1/11*: <s>[Offline 12 và mạo danh](http://l.archlinuxvn.org/archlinuxvn/msg02737.html)</s>
 * *15/10*: Gặp mặt Dương `cmpitg` tại Sài Gòn
 * *12/10*: <s>Họp mặt nhóm điều hành ArchLinuxVn tại Sài Gòn</s>
 * *21/9*: [Bản tin số 2](/zine/2014/02)
